# Esp32-ICM20948-UNCO

./: CMakeLists.txt  README.md  notas.txt  tareas.txt
docs/: architecture.md  flows.md  hardware.md  issues.md  protocol.md
docs/modules/: circ_buffer.md  espnow_manager.md  measurement.md  slave_client.md  slave_server.md  wifi_manager.md
main/: CMakeLists.txt  circ_buffer.c  circ_buffer.h  espnow_manager.c  espnow_manager.h  icm20948.c  icm20948.h  main.c  measurement.c  measurement.h  monitor_python.py  protocol.h  slave_client.c  slave_client.h  slave_server.c  slave_server.h  wifi_manager.c  wifi_manager.h
